[package]
name = "find_unicode"
default-run="fu"
version = "0.2.0"
authors = ["Pierre Chevalier <pierrechevalier83@gmail.com>"]
description = "Find Unicode characters, the easy way!"
documentation = "https://github.com/pierrechevalier83/find_unicode/blob/master/README.md"
homepage = "https://github.com/pierrechevalier83/find_unicode"
repository = "https://github.com/pierrechevalier83/find_unicode"
keywords = ["unicode", "character", "cli", "find", "easy"]
license = "MIT"
edition = "2018"

[dependencies]
skim = "0.6.8"
structopt = "0.2.18"

[[bin]]
name = "fu"
path = "src/main.rs"

[[bin]]
name = "gen_data"
path = "src/gen_data.rs"
